치킨마요의 전설

--- a/230713/my_Site/1.html
+++ b/230713/my_Site/1.html
@@ -1,29 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>WEB1 - HTML </title>
+<title>토마토 도시락 - 치킨마요 </title>
 <meta charset="utf-8">
 </head>
 <body>
-<h1><a href="index.html">WEB</a></h1>
+<h1><a href="index.html">토마토 도시락</a></h1>
 <ol>
-<li><a href="1.html">HTML</a></li>
-<li><a href="2.html">CSS</a></li>
-<li><a href="3.html">JavaScript</a></li>
+<li><a href="1.html">치킨마요</a></li>
+<li><a href="2.html">매콤치킨마요</a></li>
+<li><a href="3.html">먹으러가자</a></li>
 </ol>
-<h2>HTML이란 무엇인가?</h2>
-<p><a href="https://www.w3.org/TR/2011/WD-html5-20110405/" title="HTML5 specification">Hypertext Markup
-Language(HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web
-applications.
-Web browsers receive HTML documents from a web server or from local storage and render the documents into
-multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the
-appearance of the document.</p>
-<img src="coding.gif" width="100%">
+<h2>치킨마요란 무엇인가?</h2>
+<p><a href="http://m.tomatodosirak.co.kr/board/index.php?board=menu_01&sca=7" title="This is fuxkn Delicious">치킨마요덮밥</a> 세상에서 가장 맛있는 음식인 치킨마요는 전국민의 영양 식사로 각광받고있다.
+치킨마요중에서 가장 양이 많은 한솥 '메가 치킨마요'가 있는데 칼로리가 버거킹세트메뉴보다 높은것으로 유명하다.</p>
+<img src="chima.jpg" width="40%">
 <p style="margin-top: 40px;">
-HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects such as
-interactive forms may be embedded into the rendered page. HTML provides a means to create structured documents by
-denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are
-delineated by tags, written using angle brackets.
+진짜 치킨마요는 전설이다... 그 찐따같은 치킨마요가 맞나 ? 가슴이 웅장해지고 눈물이 난다...
 </p>
 </body>
 </html>
