--- a/230713/my_Site/2.html
+++ b/230713/my_Site/2.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>WEB1 - CSS </title>
+<title>토마토 도시락 - 매콤치킨마요</title>
 <meta charset="utf-8">
 </head>
 <body>
-<h1><a href="index.html">WEB</a></h1>
+<h1><a href="index.html">토마토 도시락</a></h1>
 <ol>
-<li><a href="1.html">HTML</a></li>
-<li><a href="2.html">CSS</a></li>
-<li><a href="3.html">JavaScript</a></li>
+<li><a href="1.html">치킨마요</a></li>
+<li><a href="2.html">매콤치킨마요</a></li>
+<li><a href="3.html">먹으러가자</a></li>
 </ol>
-<h2>CSS란 무엇인가?</h2>
-<p style="margin-top: 40px;">
-Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation
-of a document written in a markup language such as HTML.[1] CSS is a cornerstone technology
-of the World Wide Web, alongside HTML and JavaScript.[2]
-CSS is designed to enable the separation of presentation and content, including layout,
-colors, and fonts.[3] This separation can improve content accessibility; provide more flexibility
-and control in the specification of presentation characteristics; enable multiple web pages to
-share formatting by specifying the relevant CSS in a separate .css file, which reduces complexity
-and repetition in the structural content
+<h2>매콤치킨마요란 무엇인가?</h2>
+<p style="margin-top: 40px;"></p>
+치킨마요가 아무리 맛있다고 하지만, 그래도 마요네즈와 데리야끼가 들어간 덮밥일 뿐...<br>
+결국은 맛있다 맛있다 하면서 먹다가도 , 그 느끼함에 언젠간 속에서 역류를 할 때가 올 것이다<br>
+<p>
+허나 걱정하지마라 ...!
 </p>
+토마토 도시락엔 <<매콤치킨마요>> 개쩌는 메뉴가 있으니까 !
+매콤치킨마요는 정말 대단하다... 맛있는 치킨마요가 슬슬 지겨워 질 때, 먹어보게된다면 다른 차원을 열게 될 것이다.<br>
+매콤한 소스는 기존 소스와는 다른 엄청난 폭발력이 있다.
+상당히 매콤하면서도 특유의 향이나는 ... 정말이지 저세상의 음식, 가히 극락의 맛이라 할 수 있을것 이다. 
+반드시 츄라이 해보길바란다. 아 치킨마요 먹고싶다. 나는 치킨마요 먹으러 가야해서 이만...
 </body>
 </html>
