--- a/230713/my_Site/3.html
+++ b/230713/my_Site/3.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>WEB1 - JavaScript </title>
+<title>뭐하냐... </title>
 <meta charset="utf-8">
 </head>
 <body>
-<h1><a href="index.html">WEB</a></h1>
+<h1><a href="index.html">토마토 도시락</a></h1>
 <ol>
-<li><a href="1.html">HTML</a></li>
-<li><a href="2.html">CSS</a></li>
-<li><a href="3.html">JavaScript</a></li>
+<li><a href="1.html">치킨마요</a></li>
+<li><a href="2.html">매콤치킨마요</a></li>
+<li><a href="3.html">먹으러가자</a></li>
 </ol>
-<h2>JavaScript 무엇인가?</h2>
+<h2>진짜 뭐하고있냐...</h2>
 <p style="margin-top: 40px;">
-JavaScript (/ˈdʒɑːvəskrɪpt/),[10] often abbreviated JS, is a programming language that is one of
-the core technologies of the World Wide Web, alongside HTML and CSS.[11] Over 97% of websites
-use JavaScript on the client side for web page behavior,[12] often incorporating third-party
-libraries.[13] All major web browsers have a dedicated JavaScript engine to execute
+이만큼 치킨마요의 맛에 대해 이야기를 했음에도 불구하고 아직도 먹으러 가지 않고 꾸역꾸역 이 문서를 보고 있는 것이냐 ?<br>
+나였으면 바로 보던 사이트 내려놓고 자리 박차고 바로 도시락집으로 뛰어갔다... <br>
+이정도 이야기 했으면 알아들을때도 되지 않았는가 ? 지금당장 달려라.
+<h1>NOW!!!</h1>
 </p>
 </body>
 </html>
