--- a/230713/my_Site/index.html
+++ b/230713/my_Site/index.html
@@ -11,11 +11,11 @@
 <li><a href="2.html">매콤치킨마요</a></li>
 <li><a href="3.html">동옥아 먹으러가자</a></li>
 </ol>
-<h2>치킨마요란 무엇인가?</h2>
+<h2>토마토 도시락이란 무엇인가?</h2>
 <img src="chima.jpg" width="40%">
 <p style="margin-top: 40px;">
-세상에서 가장 맛있는 음식인 치킨마요는 전국민의 영양 식사로 각광받고있다.
-치킨마요중에서 가장 양이 많은 메가 치킨마요가 있는데 칼로리가 버거킹세트메뉴보다 높은것으로 유명하다.
+세상에서 가장 맛있는 음식인 치킨마요를 판매하고 있는 도시락 체인점으로 전국민의 점심을 책임지고 있다.<br>
+요즘같이 물가가 미쳐 날뛰는, 밥 한끼에 만원 박아야하는 미쳐버린 세상을 구원하는 한줄기 빛과 소금이라고 할 수 있다.
 </p>
 </body>
 </html>
