동영상소스 추가

--- a/230713/my_Site/3.html
+++ b/230713/my_Site/3.html
@@ -17,6 +17,9 @@
 나였으면 바로 보던 사이트 내려놓고 자리 박차고 바로 도시락집으로 뛰어갔다... <br>
 이정도 이야기 했으면 알아들을때도 되지 않았는가 ? 지금당장 달려라.
 <h1>NOW!!!</h1>
+<video muted autoplay loop>
+    <source src="justdoit.mp4" type="video/mp4">
+
 </p>
 </body>
 </html>
