--- a/230713/my_Site/1.html
+++ b/230713/my_Site/1.html
@@ -16,7 +16,7 @@
 치킨마요중에서 가장 양이 많은 한솥 '메가 치킨마요'가 있는데 칼로리가 버거킹세트메뉴보다 높은것으로 유명하다.</p>
 <img src="chima.jpg" width="40%">
 <p style="margin-top: 40px;">
-진짜 치킨마요는 전설이다... 그 찐따같은 치킨마요가 맞나 ? 가슴이 웅장해지고 눈물이 난다...
+진짜 치킨마요는 전설이다... 그 찐따같은 치킨마요가 맞나 ? 가슴이 웅장해지고 눈물이 난다...ㅠㅠ
 </p>
 </body>
 </html>
